estimated entries at giveaway end is used for ratio calculation

--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">sg</string>
+    <string name="app_name">Steam Gifts</string>
     <string name="navigation_about">About</string>
     <string name="navigation_help">Help</string>
 
