--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -147,6 +147,7 @@
     <string name="preference_giveaway_show_pinned">Pinned Giveaways</string>
     <string name="preference_giveaway_show_pinned_on">Always showing at the top</string>
     <string name="preference_giveaway_show_pinned_off">Not highlighted in a special way</string>
+    <string name="preferences_hide_low_rating_games">Hide games with a low rating</string>
 
     <string name="preferences_autojoin">Autojoin</string>
     <string name="preferences_autojoin_show_ratio">show ratio</string>
