changed autojoin logic

--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -161,8 +161,8 @@
     <string name="preferences_autojoin_prefer_high_rating_games">prefer games with higher rating</string>
     <string name="preferences_autojoin_bad_ratio">bad ratio</string>
     <string name="preferences_autojoin_great_ratio">great ratio</string>
-    <string name="preferences_autojoin_minimum_points_to_keep_for_bad_ratio">points to keep for bad ratio</string>
-    <string name="preferences_autojoin_minimum_points_to_keep_for_great_ratio">points to keep for great ratio</string>
+    <string name="preferences_autojoin_minimum_points_to_keep_for_untagged">points to keep for untagged games</string>
+    <string name="preferences_autojoin_minimum_points_to_keep_for_tagged">points to keep for tagged games</string>
 
 
     <string name="preferences_discussions">Discussions</string>
